--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,5 +3,5 @@ WORKDIR /app
 COPY package.json package-lock.json ./
 RUN npm install
 COPY . ./
-RUN npm run tsc
+# RUN npm run tsc
 CMD npm run dev
