--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,5 @@
 FROM ubuntu:latest
-RUN apt update && apt -y upgrade && apt install -y build-essential cmake tar wget curl zip git pkg-config
+RUN apt update && apt -y upgrade && apt install -y build-essential cmake tar wget curl zip git pkg-config ninja-build
 WORKDIR /home
 RUN wget -O /tmp/vcpkg.tar.gz https://github.com/microsoft/vcpkg/archive/master.tar.gz
 RUN tar xf /tmp/vcpkg.tar.gz -C /opt
@@ -10,6 +10,6 @@ RUN vcpkg install
 COPY . .
 RUN mkdir ./build
 WORKDIR ./build
-RUN cmake .. -DCMAKE_TOOLCHAIN_FILE=/opt/vcpkg-master/scripts/buildsystems/vcpkg.cmake
+RUN cmake .. -DCMAKE_TOOLCHAIN_FILE=/opt/vcpkg-master/scripts/buildsystems/vcpkg.cmake -G Ninja
 RUN cmake --build .
 CMD /home/build/test_backend_traffic_emulator
