--- a/backend/CMakeLists.txt
+++ b/backend/CMakeLists.txt
@@ -1,7 +1,10 @@
 cmake_minimum_required(VERSION 3.10)
 # set(CMAKE_TOOLCHAIN_FILE /opt/vcpkg-master/scripts/buildsystems/vcpkg.cmake)
+set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fuse-ld=mold")
 project(test_backend_traffic_emulator)
-set(CMAKE_CXX_STANDARD 23)
+set(CMAKE_CXX_STANDARD 20)
+find_package(userver COMPONENTS core REQUIRED)
+
 add_executable(${PROJECT_NAME} main.cpp
         Cars/Car.h
         src/Cars/Car.cpp
@@ -19,6 +22,5 @@ add_executable(${PROJECT_NAME} main.cpp
         src/Random.cpp
         Process/UpdateLights.h
         src/Process/UpdateLights.cpp)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -fno-stack-protector")
-find_package(httplib CONFIG REQUIRED)
-target_link_libraries(${PROJECT_NAME} PRIVATE httplib::httplib)
+
+target_link_libraries(${PROJECT_NAME} PRIVATE userver::core)
