--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,9 +3,7 @@ RUN apt update
 RUN apt upgrade -y
 RUN apt install -y build-essential cmake tar wget curl zip git pkg-config ninja-build
 RUN apt install -y gdb mold
-WORKDIR /tmp/backend
-#WORKDIR /app
-#COPY . .
-#RUN cmake .
-#RUN cmake --build .
-#CMD ./test_backend_traffic_emulator
+WORKDIR /app
+COPY . .
+RUN cmake . -G Ninja
+RUN cmake --build .
