--- a/backend/config_dev.yaml
+++ b/backend/config_dev.yaml
@@ -1,14 +1,11 @@
 components_manager:
   task_processors:                  # Task processor is an executor for coroutine tasks
-
     main-task-processor:          # Make a task processor for CPU-bound coroutine tasks.
       worker_threads: 4         # Process tasks in 4 threads.
-
     fs-task-processor:            # Make a separate task processor for filesystem bound tasks.
       worker_threads: 4
 
   default_task_processor: main-task-processor  # Task processor in which components start.
-
   components:                       # Configuring components that were registered via component_list
     server:
       listener:                 # configuring the main listening socket...
@@ -28,3 +25,9 @@ components_manager:
       task_processor: main-task-processor  # Run it on CPU bound task processor
       max-remote-payload: 100000
       fragment-size: 100000
+
+    settings-handler:            # Finally! Websocket handler.
+      path: /set               # Registering handlers '/*' find files.
+      method: POST               # Handle only GET requests.
+      task_processor: main-task-processor  # Run it on CPU bound task processor
+      parse_args_from_body: true
